--- a/public/desain01.html
+++ b/public/desain01.html
@@ -42,7 +42,7 @@
       <div class="flex justify-center py-5">
         <button
           id="bukaUndangan"
-          class="bg-idekatext inline-flex items-center rounded-full px-6 py-3 text-sm font-bold text-white uppercase shadow-md transition hover:bg-[#7a502a]"
+          class="bg-ideka01 inline-flex items-center rounded-full px-6 py-3 text-sm font-bold text-white uppercase shadow-md transition hover:bg-[#7a502a]"
         >
           <img src="img/01/Envelope.png" alt="Amplop" class="mr-2 h-auto w-5" />
           Buka Undangan
@@ -179,7 +179,7 @@
           Masjid Al-Hikmah, Jl. Lembayung No. 10, Sleman, Yogyakarta
         </h3>
         <button
-          class="bg-idekatext inline-flex items-center rounded-full px-6 py-3 text-sm font-bold text-white uppercase shadow-md transition hover:bg-[#7a502a]"
+          class="bg-ideka01 inline-flex items-center rounded-full px-6 py-3 text-sm font-bold text-white uppercase shadow-md transition hover:bg-[#7a502a]"
         >
           Lihat Lokasi
         </button>
@@ -203,14 +203,9 @@
         <h1 class="font-pinyon mb-16 text-6xl">Resepsi</h1>
         <h2 class="mb-4">Sabtu, 25 April 2026</h2>
         <h2 class="mb-4 font-semibold">06.00 WIB</h2>
-        <h3 class="mb-6 font-semibold">
+        <h3 class="mb-20 font-semibold">
           Masjid Al-Hikmah, Jl. Lembayung No. 10, Sleman, Yogyakarta
         </h3>
-        <button
-          class="bg-idekatext inline-flex items-center rounded-full px-6 py-3 text-sm font-bold text-white uppercase shadow-md transition hover:bg-[#7a502a]"
-        >
-          Lihat Lokasi
-        </button>
       </div>
       <div class="relative z-20 w-full overflow-hidden">
         <img
