--- a/public/produk.html
+++ b/public/produk.html
@@ -157,7 +157,7 @@
         <!-- Produk Card -->
         <a href="undangandigital.html">
           <div
-            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-115 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
@@ -170,8 +170,9 @@
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                  nisi.
+                  Undangan digital yang praktis dan elegan, cocok dibagikan
+                  melalui media sosial atau aplikasi chat. Desain eksklusif dan
+                  informasi lengkap dapat diakses hanya dalam satu tautan.
                 </p>
               </div>
             </div>
@@ -181,7 +182,7 @@
         <!-- 2 -->
         <a href="undangandigital.html">
           <div
-            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-115 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
@@ -190,12 +191,13 @@
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Undangan Digital
+                Digital Custom
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                  nisi.
+                  Undangan digital yang didesain secara personal sesuai
+                  permintaan. Cocok bagi kamu yang ingin tampilan unik,
+                  mencerminkan karakter pasangan dan tema acara spesifik.
                 </p>
               </div>
             </div>
@@ -204,7 +206,7 @@
         <!-- 3 -->
         <a href="undangandigital.html">
           <div
-            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-115 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
@@ -213,12 +215,13 @@
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Undangan Digital
+                Undangan Fisik
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                  nisi.
+                  Undangan cetak dengan kualitas premium, cocok untuk dibagikan
+                  secara langsung kepada tamu undangan. Desain klasik atau
+                  modern tersedia sesuai preferensi.
                 </p>
               </div>
             </div>
@@ -227,7 +230,7 @@
         <!-- 4 -->
         <a href="undangandigital.html">
           <div
-            class="relative h-100 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+            class="relative h-115 w-70 overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
           >
             <img
               src="img/catalog/tumbnail.jpeg"
@@ -236,12 +239,13 @@
             />
             <div class="p-4 text-center">
               <h3 class="hover:text-idekabuttonhover text-lg font-semibold">
-                Undangan Digital
+                Fisik Custom
               </h3>
               <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At,
-                  nisi.
+                  Undangan fisik dengan desain yang dibuat khusus sesuai
+                  keinginan. Mulai dari bentuk, warna, hingga detail tambahan
+                  seperti emboss atau pita bisa disesuaikan.
                 </p>
               </div>
             </div>
