--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,12 @@
       >
         <!-- Logo -->
         <a href="index.html">
-          <img class="h-auto w-35 md:w-40" src="img/Hero/logo.png" alt="" />
+          <img
+            class="h-auto w-35 md:w-40"
+            src="img/Hero/logo.png"
+            alt=""
+            loading="lazy"
+          />
         </a>
 
         <!-- Navigation & Hamburger -->
@@ -141,7 +146,11 @@
 
         <!-- Image -->
         <div class="w-10/12 sm:w-4/5 lg:w-3/4 xl:w-7/12">
-          <img src="img/Hero/hero.png" alt="Undangan Eksklusif" />
+          <img
+            src="img/Hero/idekalina.hero.webp"
+            alt="Undangan Eksklusif"
+            loading="lazy"
+          />
         </div>
       </div>
     </section>
@@ -165,6 +174,7 @@
               src="img/benefit/diamond.png"
               alt="Eksklusif"
               class="mb-8 h-13 w-13 md:h-15 md:w-15"
+              loading="lazy"
             />
             <p class="">Desain Eksklusif</p>
           </div>
@@ -175,6 +185,7 @@
               src="img/benefit/pencil.png"
               alt="Custom"
               class="mb-8 h-13 w-13 md:h-15 md:w-15"
+              loading="lazy"
             />
             <p class="">Bisa Custom</p>
           </div>
@@ -185,6 +196,7 @@
               src="img/benefit/clock.png"
               alt="Cepat"
               class="mb-8 h-13 w-13 md:h-15 md:w-15"
+              loading="lazy"
             />
             <p class="">Respon Cepat</p>
           </div>
@@ -195,6 +207,7 @@
               src="img/benefit/heart.png"
               alt="Bersahabat"
               class="mb-8 h-13 w-13 md:h-15 md:w-15"
+              loading="lazy"
             />
             <p class="">Harga Bersahabat</p>
           </div>
@@ -220,6 +233,7 @@
               src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
+              loading="lazy"
             />
           </div>
           <div class="p-6">
@@ -242,6 +256,7 @@
               src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
+              loading="lazy"
             />
           </div>
           <div class="p-6">
@@ -264,6 +279,7 @@
               src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
+              loading="lazy"
             />
           </div>
           <div class="p-6">
@@ -286,6 +302,7 @@
               src="img/catalog/tumbnail.jpeg"
               alt="Minimalis Modern"
               class="h-55 w-60"
+              loading="lazy"
             />
           </div>
           <div class="p-6">
@@ -320,6 +337,7 @@
               src="img/How to/choice0.png"
               alt="Pilih Desain"
               class="mb-4 w-14 md:w-13 lg:w-15"
+              loading="lazy"
             />
             <p class="text-xl lg:text-2xl">Pilih Desain</p>
           </div>
@@ -332,6 +350,7 @@
               src="img/How to/phone0.png"
               alt="Hubungi Kami"
               class="mb-4 w-14 md:w-13 lg:w-15"
+              loading="lazy"
             />
             <p class="text-xl font-medium lg:text-2xl">Hubungi Kami</p>
           </div>
@@ -344,6 +363,7 @@
               src="img/How to/agreement0.png"
               alt="Kirim Data"
               class="mb-4 w-14 md:w-13 lg:w-15"
+              loading="lazy"
             />
             <p class="text-xl font-medium lg:text-2xl">Kirim Data</p>
           </div>
@@ -356,6 +376,7 @@
               src="img/How to/document0.png"
               alt="Revisi Jika Perlu"
               class="mb-4 w-14 md:w-13 lg:w-15"
+              loading="lazy"
             />
             <p class="text-xl font-medium lg:text-2xl">Revisi Jika Perlu</p>
           </div>
@@ -368,6 +389,7 @@
               src="img/How to/send0.png"
               alt="Siap Kirim"
               class="mb-4 w-14 md:w-13 lg:w-15"
+              loading="lazy"
             />
             <p class="text-xl font-medium lg:text-2xl">Siap Kirim</p>
           </div>
@@ -401,26 +423,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -459,26 +486,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -516,26 +548,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -574,26 +611,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -632,26 +674,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -690,26 +737,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -748,26 +800,31 @@
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                     <img
                       class="h-1/10 w-1/10"
                       src="img/testimoni/star0.png"
                       alt=""
+                      loading="lazy"
                     />
                   </div>
                   <p
@@ -816,26 +873,39 @@
               <h3 class="mb-4 text-lg text-white">Kontak Kami</h3>
               <ul class="space-y-4 text-sm text-white">
                 <li class="flex items-center gap-2">
-                  <img src="img/Kontak kami/placeholder0.png" alt="" />
+                  <img
+                    src="img/Kontak kami/placeholder0.png"
+                    alt=""
+                    loading="lazy"
+                  />
                   <i class=""></i> Banyubiru, Ambarawa, <br />Kab Semarang
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="img/Kontak kami/email1.png" alt="" />
+                  <img src="img/Kontak kami/email1.png" alt="" loading="lazy" />
                   <i class="fas fa-envelope"></i> idekalina@gmail.com
                 </li>
                 <li class="flex items-center gap-2">
                   <img
                     src="img/Kontak kami/phone-receiver-silhouette0.png"
                     alt=""
+                    loading="lazy"
                   />
                   <i class="fas fa-phone"></i> 081235962004
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="img/Kontak kami/instagram1.png" alt="" />
+                  <img
+                    src="img/Kontak kami/instagram1.png"
+                    alt=""
+                    loading="lazy"
+                  />
                   <i class="fab fa-instagram"></i> IDEKALINA
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="img/Kontak kami/tik-tok0.png" alt="" />
+                  <img
+                    src="img/Kontak kami/tik-tok0.png"
+                    alt=""
+                    loading="lazy"
+                  />
                   <i class="fab fa-tiktok"></i> IDEKALINA
                 </li>
               </ul>
@@ -899,6 +969,7 @@
                 class="mx-auto h-auto w-35 md:w-40 lg:mx-0"
                 src="img/Hero/logo.png"
                 alt=""
+                loading="lazy"
               />
             </a>
 
