--- a/public/desain01.html
+++ b/public/desain01.html
@@ -26,7 +26,7 @@
         <!-- HALAMAN 1 -->
         <section
           id="halaman1"
-          class="min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- BUNGA -->
           <div class="relative z-20 w-full overflow-hidden">
@@ -70,7 +70,7 @@
         <!-- HALAMAN 2 -->
         <section
           id="halaman2"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- bunga -->
           <div class="relative z-20 w-full overflow-hidden">
@@ -100,7 +100,7 @@
         <!-- halaman 3 -->
         <section
           id="halaman3"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- Logo -->
           <div class="relative z-40 flex justify-center pt-10 pb-10">
@@ -139,7 +139,7 @@
         <!-- halaman 4 -->
         <section
           id="halaman4"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- bunga -->
           <div class="relative z-20 -mt-0.5 w-full overflow-hidden">
@@ -188,7 +188,7 @@
         <!-- halaman 5 -->
         <section
           id="halaman5"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- pengantin -->
           <div class="pt-25 pl-0 sm:pt-15">
@@ -230,7 +230,7 @@
         <!-- halaman 6 -->
         <section
           id="halaman6"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- bunga -->
           <div class="sm:-mt-15">
@@ -265,7 +265,7 @@
         <!-- halaman 7 -->
         <section
           id="halaman7"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
           <div class="sm:pt-30">
@@ -304,14 +304,14 @@
             <img
               src="img/01/Page1/background.png"
               alt="Bunga bawah"
-              class="h-70 w-auto"
+              class="h-80 w-auto"
             />
           </div>
         </section>
         <!-- halaman 8 -->
         <section
           id="halaman7"
-          class="hidden min-h-screen bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
+          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
           <div class="mx-4 sm:pt-10">
