--- a/public/desain01.html
+++ b/public/desain01.html
@@ -265,7 +265,7 @@
         <!-- halaman 7 -->
         <section
           id="halaman7"
-          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
+          class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
           <div class="sm:pt-30">
@@ -304,14 +304,14 @@
             <img
               src="img/01/Page1/background.png"
               alt="Bunga bawah"
-              class="h-80 w-auto"
+              class="h-100 w-auto sm:h-80"
             />
           </div>
         </section>
         <!-- halaman 8 -->
         <section
           id="halaman7"
-          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
+          class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
           <div class="mx-4 sm:pt-10">
