--- a/public/desain01.html
+++ b/public/desain01.html
@@ -150,29 +150,22 @@
             />
           </div>
           <!-- pengantin -->
-          <div class="pt-35 pl-8 sm:pt-15">
-            <div class="relative z-40">
+          <div class="mx-6">
+            <div class="relative z-40 mt-10">
               <img
-                class="xm:-mt-5 xxm:-mt-18 h-auto w-[120px] sm:-mt-0"
-                src="img/01/page4/pengantin wanita.png"
+                class="xm:-mt-5 xxm:-mt-18 w-full sm:-mt-0"
+                src="img/01/page4/pengantin wanita (1).png"
                 alt=""
               />
             </div>
-            <!-- emblem -->
-            <div class="relative z-30 ml-5 flex justify-center">
-              <img
-                class="-mt-95 h-[360px] w-auto"
-                src="img/01/page4/emblem.png"
-                alt=""
-              />
-            </div>
-            <div class="relative z-50 -mt-80 ml-32 text-left">
+            <!-- type -->
+            <div class="relative z-50 -mt-83 ml-33 text-left">
               <p class="text-xs font-bold">Mempelai Wanita</p>
               <p class="font-pinyon text-3xl">Ayundya</p>
               <p class="mb-5 text-xl font-bold">Prameswari</p>
               <p class="mb-5 text-[11px]">
                 Putri pertama dari <br />
-                <span class="font-semibold"
+                <span class="font-bold"
                   >Bapak H. Bambang Santoso <br />
                   & Ibu Hj. Nurhayati</span
                 >
@@ -191,36 +184,29 @@
           class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- pengantin -->
-          <div class="pt-25 pl-0 sm:pt-15">
-            <div class="relative z-40 pl-60">
+          <div class="mx-4">
+            <div class="relative z-40 pt-20">
               <img
-                class="xm:-mt-5 xxm:-mt-18 h-auto w-[120px] sm:-mt-0"
+                class="xm:-mt-5 xxm:-mt-18 w-full sm:-mt-0"
                 src="img/01/page5/PENGANTIN PRIA.png"
                 alt=""
               />
             </div>
-            <!-- emblem -->
-            <div class="relative z-30 flex justify-center">
-              <img
-                class="-mt-90 mr-15 h-[360px] w-auto"
-                src="img/01/page4/emblem.png"
-                alt=""
-              />
-            </div>
-            <div class="relative z-50 -mt-75 mr-38 text-right">
+            <!-- type -->
+            <div class="relative z-50 -mt-83 mr-35 text-right">
               <p class="text-xs font-bold">Mempelai Pria</p>
               <p class="font-pinyon text-3xl">Baskoro</p>
               <p class="mb-5 text-xl font-bold">Satya Nugroho</p>
               <p class="mb-5 text-[11px]">
                 Putra kedua dari <br />
-                <span class="font-semibold"
-                  >Bapak H. Widodo <br />
+                <span class="font-bold"
+                  >Bapak H. Widodo<br />
                   & Ibu Hj. Siti Rohmah</span
                 >
               </p>
               <p class="text-[11px]">
-                Jl. Mawar No. 23 <br />
-                Kelurahan Mantrijeron, <br />
+                Jl. Mawar No. 23<br />
+                Kelurahan Mantrijeron<br />
                 Kecamatan Mantrijeron <br />
                 Kota Yogyakarta
               </p>
@@ -230,22 +216,22 @@
         <!-- halaman 6 -->
         <section
           id="halaman6"
-          class="hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- bunga -->
-          <div class="sm:-mt-15">
+          <div class="">
             <div>
-              <img src="img/01/page6/bg bunga.png" alt="" />
+              <img src="img/01/page6/bg bunga atas.png" alt="" />
             </div>
             <!-- emblem -->
-            <div class="relative z-30 mx-auto flex justify-center">
+            <div class="relative z-30 mx-auto -mt-60 flex justify-center">
               <img
-                class="-mt-135 h-[370px] w-auto"
+                class="h-[370px] w-auto"
                 src="img/01/page4/emblem.png"
                 alt=""
               />
             </div>
-            <div class="relative z-50 mx-auto -mt-110 text-center">
+            <div class="relative z-50 mx-auto -mt-70 text-center">
               <p class="font-pinyon text-4xl">Akad Nikah</p>
               <p class="mb-5 text-xl font-bold">
                 Minggu, <br />
@@ -260,6 +246,9 @@
                 >
               </p>
             </div>
+            <div class="-mt-26">
+              <img src="img/01/page6/bg bunga bawah.png" alt="" />
+            </div>
           </div>
         </section>
         <!-- halaman 7 -->
@@ -268,23 +257,23 @@
           class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
-          <div class="sm:pt-30">
+          <div class="">
             <div>
               <img
                 class="relative z-40"
-                src="img/01/page6/bg bunga.png"
+                src="img/01/page6/bg bunga atas.png"
                 alt=""
               />
             </div>
             <!-- emblem -->
-            <div class="relative z-40 mx-auto flex justify-center">
+            <div class="relative z-40 mx-auto -mt-60 flex justify-center">
               <img
-                class="-mt-135 h-[370px] w-auto"
+                class="h-[370px] w-auto"
                 src="img/01/page4/emblem.png"
                 alt=""
               />
             </div>
-            <div class="relative z-50 mx-auto -mt-110 text-center">
+            <div class="relative z-50 mx-auto -mt-70 text-center">
               <p class="font-pinyon text-4xl">Resepsi</p>
               <p class="mb-5 text-xl font-bold">
                 Minggu, <br />
@@ -299,13 +288,13 @@
                 >
               </p>
             </div>
-          </div>
-          <div class="hidden sm:block">
-            <img
-              src="img/01/Page1/background.png"
-              alt="Bunga bawah"
-              class="h-100 w-auto sm:h-80"
-            />
+            <div>
+              <img
+                class="relative z-30 -mt-32"
+                src="img/01/page6/bg bunga bawah.png"
+                alt=""
+              />
+            </div>
           </div>
         </section>
         <!-- halaman 8 -->
