--- a/public/desain01.html
+++ b/public/desain01.html
@@ -14,14 +14,14 @@
   <body class="text-ideka01 font-poppins overflow-hidden bg-white">
     <div class="flex h-screen w-screen">
       <!-- KIRI (sticky) -->
-      <div class="sticky top-0 hidden h-screen w-[70%] sm:block">
+      <div class="sticky top-0 hidden sm:block sm:h-screen sm:flex-grow">
         <img src="img/01/Page1/bgkiri.png" class="h-full w-full object-cover" />
       </div>
 
       <!-- KANAN (scrollable) -->
       <div
         id="kontenKanan"
-        class="w-full max-w-[640px] overflow-y-auto scroll-smooth sm:max-w-[430px] lg:w-[30%] lg:max-w-none"
+        class="w-full overflow-y-auto scroll-smooth sm:w-[400px] sm:flex-shrink-0"
       >
         <!-- HALAMAN 1 -->
         <section
@@ -299,7 +299,7 @@
         </section>
         <!-- halaman 8 -->
         <section
-          id="halaman7"
+          id="halaman8"
           class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
@@ -388,7 +388,7 @@
         </section>
         <!-- Halaman 9 -->
         <section
-          id="halaman7"
+          id="halaman9"
           class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
@@ -429,7 +429,7 @@
         </section>
         <!-- halaman 10 -->
         <section
-          id="halaman7"
+          id="halaman10"
           class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <div class="mb-4 pt-10">
@@ -742,6 +742,82 @@
                   </div>
                   <p class="mt-1 text-xs text-gray-700">Happy wedding!</p>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- halaman12 -->
+        <section
+          id="halaman12"
+          class="relative z-10 -mt-0.5 hidden bg-[url('img/01/Page1/background.png')] bg-cover bg-center pt-2 pb-20 text-center"
+        >
+          <div class="mx-auto flex flex-col items-center justify-center p-4">
+            <div class="relative mb-6 h-64 w-64">
+              <img
+                src="img/01/page12/pengantinframe.png"
+                alt="Foto Ilustrasi Pengantin Ayudya & Baskoro"
+                class="h-full w-full object-cover p-2"
+              />
+            </div>
+
+            <p class="text-ideka01 mb-4 max-w-xs text-sm leading-relaxed">
+              Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila
+              Bapak/Ibu/Saudara/i, berkenan hadir dan memberikan doa restu
+              kepada kami
+            </p>
+
+            <p class="text-ideka01 mb-2 text-base font-semibold">
+              Wassalamu'alaikum Wr.Wb.
+            </p>
+
+            <p class="text-ideka01 mb-4 text-sm">Kami yang berbahagia,</p>
+
+            <p class="font-pinyon text-ideka01 text-[40px] font-medium">
+              Ayudya & Baskoro
+            </p>
+          </div>
+        </section>
+        <!-- footer -->
+        <section id="halaman13" class="relative z-10 hidden">
+          <div class="w-full bg-[#9f856f] px-4 py-6">
+            <div
+              class="mx-auto flex max-w-sm flex-col items-center justify-center"
+            >
+              <img
+                src="img/01/page12/idekalina.png"
+                alt="Idekalina Logo"
+                class="mb-3 h-10 w-auto object-contain"
+              />
+
+              <p class="mb-5 text-center text-sm text-white">
+                Wrapped in gratitude, exclusive design for
+                <span class="font-semibold">Ayudya & Baskoro</span>
+              </p>
+
+              <div class="flex space-x-6">
+                <a
+                  href="URL_INSTAGRAM_ANDA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="img/01/page12/logoig.png"
+                    alt="Instagram"
+                    class="h-8 w-8 object-contain"
+                  />
+                </a>
+
+                <a
+                  href="URL_WHATSAPP_ANDA"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="img/01/page12/logowa.png"
+                    alt="WhatsApp"
+                    class="h-8 w-8 object-contain"
+                  />
+                </a>
               </div>
             </div>
           </div>
